# soundcloud-desktop

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-17-cmdk-search.md  2026-06-18-cmdk-universal-search.md
docs/superpowers/specs/: 2026-06-17-cmdk-search-design.md  2026-06-18-cmdk-universal-search-design.md
scripts/: publish.sh  release.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs
src-tauri/src/media/: cache.rs  discord.rs  downloader.rs  mod.rs  nowplaying.rs  resolver.rs
src-tauri/src/sc/: auth.rs  client.rs  client_id.rs  endpoints.rs  login.rs  mod.rs  models.rs  pagination.rs  webwrite.rs
src/api/: commands.ts  queries.ts  types.ts
src/components/: AuthModals.tsx  CommandPalette.tsx  ContextMenu.tsx  Icons.tsx  InfiniteTrackList.tsx  Modal.tsx  PlayerBar.tsx  PlaylistCard.tsx  PlaylistModals.tsx  PlaylistRow.tsx  QueuePanel.tsx  Sidebar.tsx  Toasts.tsx  TokenGate.tsx  TopBar.tsx  TrackContextMenu.tsx  TrackRow.tsx  UserRow.tsx  Waveform.tsx
src/lib/: commandPalette.ts  downloads.ts  events.ts  format.ts  login.ts  modals.ts  queryClient.ts  sessionLikes.ts  stores.ts  toast.ts  updater.ts  useListSelection.ts  useScrollRestore.ts
src/pages/: ArtistPage.tsx  DownloadsPage.tsx  FeedPage.tsx  LikesPage.tsx  PlaylistDetailPage.tsx  PlaylistsPage.tsx  SearchPage.tsx  SettingsPage.tsx
src/player/: audioController.ts  playPlaylist.ts  playerStore.ts  queueStore.ts  sessionResume.ts
