[package]
name = "soundcloud-desktop"
version = "0.1.0"
description = "Personal SoundCloud desktop client"
authors = ["enyouki"]
edition = "2021"

[lib]
name = "soundcloud_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["sync", "time", "macros", "process", "fs"] }
futures = "0.3"
keyring = { version = "3", features = ["apple-native"] }
regex = "1"
thiserror = "2"
m3u8-rs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
souvlaki = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
discord-rich-presence = "1.1.0"
